# internal/dto/commodity.go
@@ -1,0 +1,5 @@
+package dto
+
+type CommodityQueryReq struct {
+	CategoryID int64 `form:"categoryID"`
+}
